static/style.css
body {
  background-color: transparent!important;
}

#motm {
  text-align: center;
  font-size: 40%!important;
  margin-bottom: 10px;
}

#what {
  background-color: transparent!important;
  border-radius: 0px;
  border: 0px;
  -webkit-appearance: none;
  overflow-y: auto;
  width: 100%;
  resize: none;
  outline: none;
  padding: 0px;
  font-size: 20px;
  color: aliceblue;
}

#what:focus {
  outline: none!important;
}

#info {
  font-size: 30px;
}

.jumbotron {
  background-color:	#013564;
  color: aliceblue;
  position: relative;
  top: 0px;
  border-radius: 0px;
  margin: 0px;
}

.navbar-nav {
  background-color: #005398!important;
}



nav.navbar-expand-sm {
  margin-bottom: 50px;
}

.subcat {
  float: left;
  text-align: center;
  width: 33.3%;
  margin:5px;
  color:black!important;
  background-color: #B06C96!important;
  border-radius: 3px;
}

.subcat:hover {
  color:white!important;
  background-color: #951272!important;
}

.d-flex flex-wrap {
  display: flex;
  flex-direction: row;
  text-align: center;
  margin: auto;
  width: 80%;
}

#logo {
  position: absolute;
  right: 20px;
  top: 10px;
}

 .breadcrumb {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  margin: 0px;
}

@media only screen and (max-width: 600px) {
  .subcat {
    float: left;
    width: 75%;
  }

  .d-flex flex-wrap {
    display: flex;
    flex-direction: column;
  }

  #logo {
    width: 40px;
  }
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px; /* Margin bottom by footer height */
}

.row {
  max-width: 100vw!important;
}

#glossary {
  color: aliceblue;
  background-color: #005398!important;
}

#useful {
  color: aliceblue;
  background-color: var(--gray-dark);
}

#useful > h5 > ul {
  list-style-type: none;
  text-indent: -20px;
}
#useful > h5 > ul > li::before {
  content: "\2192 \0020";
}

a.nav-link {
  font-size: 18pt;
  color: rgba(255,255,255,.7)!important;
}

a.nav-link:hover {
  color: rgba(255,255,255,1)!important;
}

ul#breadcrumb>li>a {
  font-size: 14pt;
}

nav {
  margin-bottom: 10px!important;
}

#bodyeything {
  padding-top: 50px;
}

#button {
  margin: 0px;
}

.acordlink {
  color: lightgray!important;
  font-size: 18px;
}

.acordlink:not(.collapsed)::before{
  content: "-";
}

.acordlink.collapsed::before{
  content: "+";
}

#accordionBody {
  margin: 3px;
}

.glossary:not(.collapsed)::before{
  content: "-";
}

.glossary.collapsed::before{
  content: "+";
}

#accordion2 {
  margin-left: 40px;
}

#accordionBody {
  padding-top: 20px;
  padding-left: 10px;
  padding-bottom: 20px;
}

#glossary-link {
  color: #FFB948!important
}

